Final Project VM

--- a/gradient-domain-fusion/index.html
+++ b/gradient-domain-fusion/index.html
@@ -14,6 +14,7 @@
         <div class="single">
             <img src="outputs/toy.png">
         </div>
+        <p>Here, we implemented the loss function as a matrix and then solved using least squares.</p>
 
         <hr>
 
@@ -21,16 +22,19 @@
         <div class="single">
             <img src="outputs/penguin_poisson.png">
         </div>
+        <p>We implemented the loss function with the 4 neighbors. There seems to be a rectangular artifact at the top.</p>
 
         <h3>Part 3: Bells and Whistles Mixed Gradients</h3>
         <div class="single">
             <img src="outputs/penguin_mixed.png">
+            <p>This seems to be a lot better.</p>
         </div>
 
         <h3>Part 4: Bells and Whistles Color2Gray</h3>
         <div class="pair">
             <img src="outputs/4.png">
             <img src="outputs/8.png">
+            <p>We used both the mixed gradients as well as the toy code on each color layer. Then we max projected the channels.</p>
         </div>
         
     </body>
