--- a/eulerian-video-magnification/index.html
+++ b/eulerian-video-magnification/index.html
@@ -41,7 +41,11 @@
                 <table>
                     <tr>
                         <td>
-                            <img src="images/face.gif" align="middle" width="320px"/>
+                            <img src="images/baby2.gif" align="middle" height="360px"/>
+                            <figcaption align="middle">Magnified Baby 2.</figcaption>
+                        </td>
+                        <td>
+                            <img src="images/face.gif" align="middle" height="360px"/>
                             <figcaption align="middle">Magnified Face.</figcaption>
                         </td>
                     </tr>
