--- a/gradient-domain-fusion/index.html
+++ b/gradient-domain-fusion/index.html
@@ -27,7 +27,7 @@
         <h3>Part 3: Bells and Whistles Mixed Gradients</h3>
         <div class="single">
             <img src="outputs/penguin_mixed.png">
-            <p>This seems to be a lot better.</p>
+            <p>This seems to be a lot better. We used the gradient that had the larger magnitude</p>
         </div>
 
         <h3>Part 4: Bells and Whistles Color2Gray</h3>
