--- a/eulerian-video-magnification/index.html
+++ b/eulerian-video-magnification/index.html
@@ -72,15 +72,15 @@
                 <table>
                     <tr>
                         <td>
-                            <img src="images/baby2_1.gif" align="middle" height="360px"/>
+                            <img src="images/baby2_mag2.gif" align="middle" height="360px"/>
                             <figcaption align="middle">Magnified Baby 2. Frequency Range=(0.2, 5.0) Hz, Alpha=100, MagnificationFactor=1</figcaption>
                         </td>
                         <td>
-                            <img src="images/face_1.gif" align="middle" height="360px"/>
+                            <img src="images/face_mag2.gif" align="middle" height="360px"/>
                             <figcaption align="middle">Magnified Face. Frequency Range=(0.2, 5.0) Hz, Alpha=100, MagnificationFactor=1 </figcaption>
                         </td>
                         <td>
-                            <img src="images/wrist_1.gif" align="middle" height="360px"/>
+                            <img src="images/wrist_mag2.gif" align="middle" height="360px"/>
                             <figcaption align="middle">Magnified Wrist. Frequency Range=(0.2, 5.0) Hz, Alpha=100, MagnificationFactor=1 </figcaption>
                         </td>
                     </tr>
@@ -93,15 +93,15 @@
                 <table>
                     <tr>
                         <td>
-                            <img src="images/baby2_2.gif" align="middle" height="360px"/>
+                            <img src="images/baby2_mag3.gif" align="middle" height="360px"/>
                             <figcaption align="middle">Magnified Baby 2. Frequency Range=(0.83, 14.0) Hz, Alpha=200, MagnificationFactor=1</figcaption>
                         </td>
                         <td>
-                            <img src="images/face_2.gif" align="middle" height="360px"/>
+                            <img src="images/face_mag3.gif" align="middle" height="360px"/>
                             <figcaption align="middle">Magnified Face. Frequency Range=(0.83, 14.0) Hz, Alpha=200, MagnificationFactor=1 </figcaption>
                         </td>
                         <td>
-                            <img src="images/wrist_2.gif" align="middle" height="360px"/>
+                            <img src="images/wrist_mag3.gif" align="middle" height="360px"/>
                             <figcaption align="middle">Magnified Wrist. Frequency Range=(0.83, 14.0) Hz, Alpha=200, MagnificationFactor=1 </figcaption>
                         </td>
                     </tr>
@@ -110,7 +110,7 @@
 
             <h2 align="left">Bells and Whistles: Augmenting Lower Amplitudes</h2>
             <p>We augment lower frequencies (0.3, 1.0) Hz where alpha is 300 and magnification factor is 2 for <b>baby.mp4</b> We see that we augment the breathing.</p>
-            <img src="images/baby.gif" align="middle" height="360px"/>
+            <img src="images/baby_mag.gif" align="middle" height="360px"/>
             
         </div>
     </body>
